# surrealguard

./: Cargo.toml  README.md  query.txt
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/codegen/: Cargo.toml
crates/codegen/src/: config.rs  error.rs  lib.rs
crates/codegen/src/typescript/: mod.rs
crates/codegen/tests/: typescript.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  prelude.rs
crates/core/src/analyzer/: context.rs  error.rs  mod.rs  schema_test.rs
crates/core/src/analyzer/context/: events.rs  functions.rs  indexes.rs  mod.rs  params.rs  schema.rs  tokens.rs
crates/core/src/analyzer/functions/: array.rs  crypto.rs  custom.rs  duration.rs  math.rs  mod.rs  object.rs  parse.rs  rand.rs  search.rs  string.rs  time.rs  types.rs  vector.rs
crates/core/src/analyzer/model/: macros.rs  mod.rs  types.rs
crates/core/src/analyzer/statements/: mod.rs  schema.rs
crates/core/src/analyzer/statements/data/: create.rs  delete.rs  insert.rs  mod.rs  relate.rs  select.rs  update.rs  upsert.rs
crates/core/src/analyzer/statements/schema/: define.rs  mod.rs  remove.rs
crates/core/tests/: mod.rs
crates/core/tests/statements/: mod.rs  select.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
examples/: surrealguard.toml
