[package]
name = "surrealguard"
version.workspace = true
edition.workspace = true

[dependencies]
surrealdb.workspace = true
thiserror.workspace = true
surrealguard-core = { path = "../core" }
surrealguard-codegen = { path = "../codegen" }
clap = { version = "4", features = ["derive"]}
# Needed for some weird reason :(
clap_derive = { version = "4.0.0-rc.1"}
walkdir = "2.5.0"
console = "0.15.10"
notify = "8.0.0"
regex = "1.10.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.20"
