[package]
name = "surrealguard-codegen"
version.workspace = true
edition.workspace = true

[dependencies]
surrealdb.workspace = true
thiserror.workspace = true
surrealguard-core = { path = "../core" }
surrealguard-macros = { path = "../macros" }
serde = "1.0.217"
toml = "0.8.20"
regex = "1.11.1"
walkdir = "2.5.0"
notify = "8.0.0"
console = "*"
