[package]
name = "surrelguard-macros"
version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
surrealguard-core= { path = "../core" }
surrealguard-codegen = { path = "../codegen" }
surrealdb.workspace = true

# Macro specific dependencies
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
