[package]
name = "surrealguard-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Supplimentary proc macros to facilitate testing and development in surrealguard-core."

[lib]
proc-macro = true

[dependencies]
surrealdb.workspace = true

# Macro specific dependencies
syn = { version = "2.0", features = [] }
quote = "1.0"
proc-macro2 = "1.0"
